added a cell with Point in it

--- a/index.ipynb
+++ b/index.ipynb
@@ -28,9 +28,11 @@
    "source": [
     "import os\n",
     "from arcgis.gis import GIS\n",
+    "from arcgis.geometry import Point\n",
     "gis = GIS(\"https://maps.arcgis.com\")\n",
+    "\n",
     "some_maps = gis.content.search(query=\"*\", item_type=\"Web Map\", max_items=10)\n",
-    "some_maps"
+    "print(some_maps)"
    ]
   },
   {
@@ -79,6 +81,26 @@
    ],
    "source": [
     "gis.map(some_maps[8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x': -123, 'y': 46.6, 'spatialReference': {'wkid': 4326}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from arcgis.geometry import Geometry, Point\n",
+    "from arcgis.geometry.filters import intersects\n",
+    "pt = Point({\"x\":-123, \"y\":46.6, \"spatialReference\": {\"wkid\":4326}})\n",
+    "print(pt)"
    ]
   },
   {
